--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -4,6 +4,9 @@ body {
   font-family: sans-serif;
 }
 
+hr {
+  width: 50em;
+}
 
 .App {
   text-align: center;
@@ -29,6 +32,12 @@ body {
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.charts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header-text {
