--- a/src/scss/_App.scss
+++ b/src/scss/_App.scss
@@ -1,11 +1,22 @@
+@import "./variables.scss";
+
 body {
-  margin: 0 10em;
   padding: 0;
-  font-family: sans-serif;
+  font-family: serif;
+  background-color: $darkblue;
 }
 
 hr {
-  width: 50em;
+  margin: 3em auto;
+  width: 75%
+}
+
+p {
+  color: $paleyellow;
+}
+
+h1 {
+  color: $paleyellow;
 }
 
 .App {
@@ -15,23 +26,16 @@ hr {
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
 .App-header {
-  background-color: #222;
   padding: 20px;
-  color: white;
+  color: $paleyellow;
 }
 
 .App-intro {
   font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
 
 .charts {
